vbnc/vbnc/tests/Errors/30198.vb
Class A
    Shared Sub Main()
        Dim o As Object = If(1,2,3
    End Sub
End Class